@startuml

package app {

  package main {
    class MainApp {
      +FastAPI instance
      +include_router()
    }
  }

  package routers {
    class task_router <<module>>
  }

  package services {
    class TaskApplicationService {
      +create_task()
    }
  }

  package schemas {
    class TaskCreateSchema {
      +title: str
      +description: str
      +done: bool
    }

    class TaskSchema {
      +id: UUID
      +title: str
      +description: str
      +done: bool
    }

    class TaskResponseSchema {
      +message: str
      +task: TaskSchema
    }
  }

  package db {
    package models {
      class TaskModel {
        +id: str
        +title: str
        +description: str
        +done: bool
      }
    }

    package session {
      class AsyncSessionManager {
        +get_db()
      }
    }
  }
}

note right of task_router
  POST /tasks/
  prefix="/tasks"
  response_model=TaskResponseSchema
end note

' 依存関係（クラス名・モジュール名で指定）
MainApp --> task_router : include_router()
task_router --> TaskApplicationService : uses
task_router --> TaskCreateSchema : uses input schema
task_router --> TaskResponseSchema : uses output schema
TaskApplicationService --> AsyncSessionManager : uses for DB session
TaskApplicationService --> TaskModel : ORM操作
TaskApplicationService --> TaskCreateSchema : 入力DTO
TaskApplicationService --> TaskSchema : 出力DTO
TaskApplicationService --> TaskResponseSchema : return
TaskCreateSchema --> TaskSchema : creates entity
TaskResponseSchema --> TaskSchema : has-a
TaskSchema --> TaskModel : from_orm()

@enduml
